# mecs

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.c
include/: mecs-component.h  mecs-entity.h  mecs-utils.h  mecs-world.h  mecs.h
include/utils/: mecs-bitset.h  mecs-constants.h  mecs-debug.h  mecs-sparse-set.h  mecs-sparseset.h
src/: mecs-entity.c  mecs-utils.c  mecs-world.c  mecs.c
src/utils/: mecs-debug.c  mecs-sparse-set.c  mecs-sparseset.c
